Fixed erratic casing in test suite BIB files.
The downloaded files needed case-sensitive parsing for abbreviation definitions, but needed case-insensitive parsing for field names. This is silly. The natural compromise is to just use lower case field names inside database entries, and this is how the files were modified.

--- a/test/karger.bib
+++ b/test/karger.bib
@@ -26,7 +26,7 @@
 @string{DM = {Discrete Mathematics}}
 @string{JCSS = {Journal of Computer and System Sciences}}
 @string{TCS = {Theoretical Computer Science}}
-@string{LNCS = {Lecture Notes in Computer Science}}
+@string{LNCS = {Lecture notes in Computer Science}}
 @string{prelim = {A preliminary version appeared in }}
 @string{journal = {Journal version appears in } }
 @string{special = {Special issue of selected papers from }}
@@ -761,7 +761,7 @@ time. It was a randomized Monte Carlo algorithm
 that worked with high probability. Our oracle also has a
 constant query time and an $O(n^2)$ space requirement, but it
 has an improved construction time of $O(mn)$, and it is deterministic.
-Note that $O(1)$ query, $O(n^2)$ space, and $O(mn)$
+note that $O(1)$ query, $O(n^2)$ space, and $O(mn)$
 construction time is also the best known bound (up to logarithmic
 factors) for the simpler problem of finding all pairs
 shortest paths in a weighted, directed graph. Thus, barring
@@ -786,7 +786,7 @@ our oracle is optimal up to logarithmic factors.
 @InProceedings{Karger:Listit,
   author = 	 {Van Kleek, Max and Michael Bernstein and Greg
                   Vargas and Katrina Panovich and David Karger and mc schraefel},
-  title = 	 {Note to Self: Examining Personal Information-Keeping in a Lightweight Note-Taking Tool},
+  title = 	 {note to Self: Examining Personal Information-Keeping in a Lightweight note-Taking Tool},
   conference = {CHI},
   booktitle =	 {Proceedings of the ACM CHI Conference on Human Factors in Computing Systems},
   year = 	 2009,
@@ -1510,7 +1510,7 @@ adoption and use of the Semantic Web and its applications.}
    author = {Edward W. Boyer and Kai Shih and David R. Karger and L. Quang
                   and P. Case},
    title = {Internet Surveillance of Pro-drug Websites. I.
-                  Incidence of Club Drug Reporting Over a One-Year
+                  Incidence of Club Drug Reporting Over a One-year
                   Period.},
    journal = {Journal of Toxicology: Clinical Toxicology},
    year = {2001},
@@ -1663,7 +1663,7 @@ maintained at a cost of $\Olog(n^{\epsilon})$ time per insertion.}
 
 @InProceedings{Karger:SemApps,
   author = 	 {Dennis Quan and David Huynh and David R. Karger},
-  title = 	 {Haystack: A Platform for Authoring End-User Semantic
+  title = 	 {Haystack: A Platform for authoring End-User Semantic
                   Web Applications},
   pages =        {738--753},
   link = {http://www.springerlink.com/index/H74TVQB63J2DF9W8},
@@ -1672,7 +1672,7 @@ maintained at a cost of $\Olog(n^{\epsilon})$ time per insertion.}
   url={http://haystack.csail.mit.edu/papers/iswc2003-haystack},
 	confurl = "http://iswc2003.semanticweb.org/",
 pdf = "http://haystack.lcs.mit.edu/papers/iswc2003-haystack.pdf",
-	pdfKB = "153",
+	pdfkb = "153",
   cat:multiple =	{Information Retrieval;Haystack; Semantic Web},
 abstract={The Semantic Web promises to open innumerable opportunities
                   for automation and information retrieval by
@@ -2336,7 +2336,7 @@ be saturated to give a maximum flow.
   month = may,
   cat:multiple =	{Information Retrieval;Semantic Web;CHI;Haystack},
   pdf = {http://people.csail.mit.edu/dfhuynh/research/papers/uist2006-augmenting-web-sites.pdf},
-  pdfKB = "1400",
+  pdfkb = "1400",
   year =	 2006,
   abstract = "Existing augmentations of web pages are mostly small cosmetic changes (e.g., removing ads) and minor addition of third-party content (e.g., product prices from competing sites). None leverages the structured data presented in web pages. This paper describes Sifter, a web browser extension that can augment a web site with advanced filtering and sorting functionality. These added features work inside the site's own pages, preserving the site's presentational style, as if the site itself has implemented the features. Sifter contains an algorithm that scrapes structured data out of web pages while usually requiring no user intervention. We tested Sifter on real web sites and real users and found that people could use Sifter to perform sophisticated queries and high-level analyses on sizable data collections on the Web. We propose that web sites can be similarly augmented with other sophisticated data-centric functionality, giving users new benefits over the existing Web."
 }
@@ -2366,7 +2366,7 @@ be saturated to give a maximum flow.
  location = {Banff, Alberta, Canada},
  doi = {10.1145/1242572.1242672},
 	pdf = "http://people.csail.mit.edu/dfhuynh/research/papers/www2007-exhibit.pdf",
-	pdfKB = "2460",
+	pdfkb = "2460",
 	author = "David Huynh and Robert Miller and David R. Karger",
 	abstract = "It is no surprise that Semantic Web researchers and enthusiasts are excited to publish and accumulate semi-structured data on the Web. Beyond our community, however, we see many authors with structured data who want to publish it in rich browsing interfaces. These small-time authors are similar to early enthusiasts of the Web, simply excited by the opportunity to use a new medium to share information that they care about. For these users, we propose Exhibit, a lightweight structured data publishing framework that duplicates many of the desirable properties that contributed to the original growth of the Web. We argue that appealing to this segment of the Web population?addressing their publishing needs at very low cost?lets us leverage their labor to put structure on content that otherwise would be published in hand-authored HTML, and thus very hard to harvest automatically.",
 	projectSite = "http://simile.mit.edu/exhibit/",
@@ -2395,7 +2395,7 @@ be saturated to give a maximum flow.
 	pdf = "http://people.csail.mit.edu/dfhuynh/research/papers/iswc2007-potluck.pdf",
 	author = "David Huynh and Robert Miller and David R. Karger",
 	abstract = "<p>As more and more reusable structured data appears on the Web, casual users will want to take into their own hands the task of mashing up data rather than wait for mash-up sites to be built that address exactly their individually unique needs. In this paper, we present Potluck, a Web user interface that lets casual users?those without programming skills and data modeling expertise?mash up data themselves.</p><p>Potluck is novel in its use of drag and drop for merging fields, its integration and extension of the faceted browsing paradigm for focusing on subsets of data to align, and its application of simultaneous editing for cleaning up data syntactically. Potluck also lets the user construct rich visualizations of data in-place as the user aligns and cleans up the data. This iterative process of integrating the data while constructing useful visualizations is desirable when the user is unfamiliar with the data at the beginning?a common case?and wishes to get immediate value out of the data without having to spend the overhead of completely and perfectly integrating the data first.</p><p>A user study on Potluck indicated that it was usable and learnable, and elicited excitement from programmers who, even with their programming skills, previously had great difficulties performing data integration.</p>",
-	pdfKB = "1677",
+	pdfkb = "1677",
 	projectSite = "http://simile.mit.edu/potluck/",
 	project = "Potluck",
 	screencastURL = "http://people.csail.mit.edu/dfhuynh/research/media/iswc2007/potluck-screencast.mov",
@@ -2408,7 +2408,7 @@ be saturated to give a maximum flow.
 
 @InProceedings{Karger:Haystack-swfat03,
   author = 	 {Dennis Quan and David Huynh and David R. Karger},
-  title = 	 {RDF Authoring Environments for End Users},
+  title = 	 {RDF authoring Environments for End Users},
   booktitle =	 {International Workshop on Semantic Web Foundations
                   and Application Technologies (SWFAT)},
   year =	 2003,
@@ -2418,7 +2418,7 @@ be saturated to give a maximum flow.
   month = mar,
   confurl = {http://www-kasm.nii.ac.jp/SWFAT/proceedings.html},
 	pdf = "http://haystack.csail.mit.edu/papers/swfat2003.pdf",
-	pdfKB = "494",
+	pdfkb = "494",
 	abstract = {The Semantic Web promises to open innumerable opportunities for
 automation and information retrieval by standardizing the protocols for
 metadata exchange. However, just as the success of the World Wide Web can
@@ -2453,7 +2453,7 @@ International Semantic Web Conference (ISWC)},
 	venue = "ISWC",
 	year = "2005",
         month = oct,
-	pdfKB = "1465",
+	pdfkb = "1465",
 	event = "Semantic Desktop Workshop",
 	abstract = {Although a lot of information has become readily
                   accessible and necessary for daily work, the current
@@ -2485,7 +2485,7 @@ International Semantic Web Conference (ISWC)},
         booktitle = {Developers' day,  $12^{th}$ International World
                   Wide Web Conference},
 	conf = "http://www.www2003.org/",
-	pdfURL = "http://haystack.lcs.mit.edu/papers/www2003-messaging.pdf",
+	pdfurl = "http://haystack.lcs.mit.edu/papers/www2003-messaging.pdf",
 	author = "Dennis Quan and Karun Bakshi and David R. Karger",
 	venue = "WWW",
 	year = "2003",
@@ -2493,7 +2493,7 @@ International Semantic Web Conference (ISWC)},
   cat:multiple =	{Information Retrieval;Semantic Web;CHI;Haystack},
   pages =	 231,
   crossref={www03},
-	pdfKB = "307",
+	pdfkb = "307",
 	event = "Developer's Day",
 	abstract = {Since its inception, the Internet has been a hotbed of several successful
 communications channels, starting off with e-mail, Internet
@@ -2526,7 +2526,7 @@ storage and retrieval.}
 	confurl = "http://www.interact2003.org/",
   studentwork = student,
 	pdf = "http://haystack.lcs.mit.edu/papers/interact2003-multicat.pdf",
-	pdfKB = "175",
+	pdfkb = "175",
   pdf = hayweb # {interact2003-multicat.pdf},
 abstract = {As the amount of information stored on and accessed by computer has increased over the past twenty
 years, the tools available for organizing and retrieving such information have become outdated. The folder paradigm
@@ -2549,7 +2549,7 @@ think about organizing their information.}
   studentwork = student,
   cat:multiple =	{Information Retrieval;Semantic Web;CHI;Haystack},
 	pdf = "http://haystack.csail.mit.edu/papers/sww02.pdf",
-	pdfKB = "310",
+	pdfkb = "310",
   crossref =	 {semweb02},
 abstract = {The Resource Definition Framework (RDF) is designed to support
 agent communication on the Web, but it is also suitable as a
@@ -2583,13 +2583,13 @@ for manipulating RDF.}
 pub-type={Demo},
   note={Demo},
 	pdf = "http://haystack.lcs.mit.edu/papers/iui2003-demo.pdf",
-	pdfKB = "97",
+	pdfkb = "97",
 }
 
-@misc{Karger:StickyNotes-Poster,
+@misc{Karger:Stickynotes-Poster,
   author = 	 {David R. Karger and Boris Katz and Jimmy Lin and
                   Dennis Quan},
-  title = 	 {Sticky Notes for the Semantic Web},
+  title = 	 {Sticky notes for the Semantic Web},
   crossref={iui03},
   pages = "254--256",
   cat:multiple =	{Information Retrieval;Semantic Web;CHI;Haystack},
@@ -3528,7 +3528,7 @@ without costs.}
 author =       "Daniel W. Engels and David R. Karger and S. G. Kolliopoulos
                  and S. Sengupta and R. N. Uma and Joel Wein",
   title =        "Techniques for Scheduling with Rejection",
-  booktitle =      "European Symposium on Algorithms (Lecture Notes in
+  booktitle =      "European Symposium on Algorithms (Lecture notes in
                   Computer Science) ",
 venue={ESA},
   volume =       "1461",
@@ -4030,7 +4030,7 @@ iterative decoding.}
   volume = 51,
   number = 3,
   pages = {954-972},
-url = {http://ieeexplore.ieee.org/iel5/18/30405/01397933.pdf?isNumber=30405&prod=JNL&arnumber=1397933&arSt=+954&ared=+972&arAuthor=+Feldman%2C+J.%3B++Wainwright%2C+M.J.%3B++Karger%2C+D.R.},
+url = {http://ieeexplore.ieee.org/iel5/18/30405/01397933.pdf?isNumber=30405&prod=JNL&arnumber=1397933&arSt=+954&ared=+972&arauthor=+Feldman%2C+J.%3B++Wainwright%2C+M.J.%3B++Karger%2C+D.R.},
 cat:multiple =	{Theory;Coding},
   studentwork = student,
 abstract = {Abstract: A new method is given for performing approximate
@@ -4408,8 +4408,8 @@ given connection problem than that in [5].}
   crossref =	 {uist03},
 	conferenceURL = "http://www.uist.org/",
   cat:multiple =	{Information Retrieval;Haystack;Semantic Web;CHI},
-	pdfURL = "http://haystack.csail.mit.edu/papers/uist2003-uicont.pdf",
-	pdfKB = "111",
+	pdfurl = "http://haystack.csail.mit.edu/papers/uist2003-uicont.pdf",
+	pdfkb = "111",
   pdf = hayweb # {uist2003-uicont.pdf},
 abstract = {Dialog boxes that collect parameters for commands often
 create ephemeral, unnatural interruptions of a program's
@@ -4694,7 +4694,7 @@ booktitle = {International Semantic Web Conference (ISWC)},
 year = 2005,
 month=nov,
 	pdf = "http://simile.mit.edu/papers/iswc05.pdf",
-	pdfKB = "2400",
+	pdfkb = "2400",
 	abstract = "<p>The Semantic Web Initiative envisions a Web wherein information is offered free of presentation, allowing more effective exchange and mixing across web sites and across web pages. But without substantial Semantic Web content, few tools will be written to consume it; without many such tools, there is little appeal to publish Semantic Web content.</p><p>To break this chicken-and-egg problem, thus enabling more flexible information access, we have created a web browser extension called Piggy Bank that lets users make use of Semantic Web content within Web content as users browse the Web. Wherever Semantic Web content is not available, Piggy Bank can invoke screenscrapers to re-structure information within web pages into Semantic Web format. Through the use of Semantic Web technologies, Piggy Bank provides direct, immediate benefits to users in their use of the existing Web. Thus, the existence of even just a few Semantic Web-enabled sites or a few scrapers already benefits users. Piggy Bank thereby offers an easy, incremental upgrade path to users without requiring a wholesale adoption of the Semantic Web's vision.</p><p>To further improve this Semantic Web experience, we have created Semantic Bank, a web server application that lets Piggy Bank users share the Semantic Web information they have collected, enabling collaborative efforts to build sophisticated Semantic Web information repositories through simple, everyday's use of Piggy Bank.</p>",
 cat:multiple =	{Haystack;Semantic Web;Information Retrieval},
 }
@@ -4710,7 +4710,7 @@ number = 1,
 pages = {16-27},
 year = 2007,
 	pdf = "http://simile.mit.edu/papers/iswc05.pdf",
-	pdfKB = "2400",
+	pdfkb = "2400",
 	abstract = "<p>The Semantic Web Initiative envisions a Web wherein information is offered free of presentation, allowing more effective exchange and mixing across web sites and across web pages. But without substantial Semantic Web content, few tools will be written to consume it; without many such tools, there is little appeal to publish Semantic Web content.</p><p>To break this chicken-and-egg problem, thus enabling more flexible information access, we have created a web browser extension called Piggy Bank that lets users make use of Semantic Web content within Web content as users browse the Web. Wherever Semantic Web content is not available, Piggy Bank can invoke screenscrapers to re-structure information within web pages into Semantic Web format. Through the use of Semantic Web technologies, Piggy Bank provides direct, immediate benefits to users in their use of the existing Web. Thus, the existence of even just a few Semantic Web-enabled sites or a few scrapers already benefits users. Piggy Bank thereby offers an easy, incremental upgrade path to users without requiring a wholesale adoption of the Semantic Web's vision.</p><p>To further improve this Semantic Web experience, we have created Semantic Bank, a web server application that lets Piggy Bank users share the Semantic Web information they have collected, enabling collaborative efforts to build sophisticated Semantic Web information repositories through simple, everyday's use of Piggy Bank.</p>",
 cat:multiple =	{Haystack;Semantic Web;Information Retrieval},
 }
@@ -4909,56 +4909,56 @@ source={http://theory.lcs.mit.edu/~dmjones/STOC/stoc.bib}
 }
 
 @techreport{Henzinger:Menger,
-AUTHOR = {Monika Rauch Henzinger and Jon Kleinberg and Satish Rao},
-TITLE = {Short-Length {M}enger Theorems},
+author = {Monika Rauch Henzinger and Jon Kleinberg and Satish Rao},
+title = {Short-Length {M}enger Theorems},
 INSTITUTION= {Digital Systems Research Center},
 ADDRESS = {130 Lytton Ave., Palo Alto, CA 94301},
 NUMBER={1997-022},
-YEAR=1997}
+year=1997}
 
 @TECHREPORT{3lisp,
-        AUTHOR = {Brian Cantwell Smith},
-        TITLE = {Reflection and Semantics in a Procedural Language},
+        author = {Brian Cantwell Smith},
+        title = {Reflection and Semantics in a Procedural Language},
         INSTITUTION = MITLCS,
-        YEAR = {1982},
+        year = {1982},
         NUMBER = {272},
         ADDRESS = MIT-ADDR,
         MONTH = jan
 }
 
 @MISC{DublinCore,
-	AUTHOR = {Stuart L. Weivel and Eric J. Miller},
-	TITLE = {Dublin Core MetaData Element Set},
+	author = {Stuart L. Weivel and Eric J. Miller},
+	title = {Dublin Core MetaData Element Set},
 	HOWPUBLISHED = {{\tt http://www.oclc.org:5046/research/dublin\_core/}},
 	MONTH = may,
-	YEAR = {1996}
+	year = {1996}
 }
 
 @ARTICLE{WarwickFramework,
-	AUTHOR = {Carl Lagoze},
-	TITLE = {The Warwick MetaData Workshop},
+	author = {Carl Lagoze},
+	title = {The Warwick MetaData Workshop},
 	JOURNAL = {DLIB Magazine},
-	YEAR = {1996},
+	year = {1996},
 	MONTH = aug,
-	NOTE = {{\tt http://www.dlib.org/dlib/july96/lagoze/07lagoze.html}}
+	note = {{\tt http://www.dlib.org/dlib/july96/lagoze/07lagoze.html}}
 }
 
 @MISC{DSTC,
-	AUTHOR = {DSTC},
-	TITLE = {What'sHot Information Broker},
+	author = {DSTC},
+	title = {What'sHot Information Broker},
 	HOWPUBLISHED = {{\tt http://www.dstc.edu.au/BDU/APAP/WhatsHot/WhatsHot.html}},
 	KEY = {What's Hot}
 }
 
 @MISC{Cyperdog,
 	organization = {{Apple Computer, Inc.}},
-	TITLE = {Cyberdog},
+	title = {Cyberdog},
 	HOWPUBLISHED = {{\tt http://www.cyberdog.apple.com/overview}},
 	KEY = {Cyberdog}
 }
 
 @MISC{MCF,
-	TITLE = {MetaContent Format},
+	title = {MetaContent Format},
 	HOWPUBLISHED = {{\tt http://mcf.research.apple.com/}},
 	KEY = {MetaContent Format}
 }
@@ -4976,7 +4976,7 @@ YEAR=1997}
                   contributions directly into user interfaces. We
                   focus on writing and editing, complex endeavors that
                   span many levels of conceptual and pragmatic
-                  activity. Authoring tools offer help with
+                  activity. authoring tools offer help with
                   pragmatics, but for higher-level help, writers
                   commonly turn to other people. We thus present
                   Soylent, a word processing interface that enables
@@ -5364,7 +5364,7 @@ Heuristic},
 @INPROCEEDINGS{Aldous:Coupling,
 	author = {D Aldous},
 	title = {Random Walks on Finite Groups and Rapidly Mixing Markov Chains},
-	booktitle = {Siminaire de Probabilites XVII 1981/1982. Lecture Notes in Mathematics},
+	booktitle = {Siminaire de Probabilites XVII 1981/1982. Lecture notes in Mathematics},
 	year = {1983},
 	pages = {243--297},
 	publisher = {Springer-Verlag}
@@ -5582,14 +5582,14 @@ source={http://theory.lcs.mit.edu/~dmjones/STOC/stoc.bib}
 }
 
 @INCOLLECTION{BB-93,
-AUTHOR = "T. Badics and R. Boros",
-TITLE = "{Implementing a Maximum Flow Algorithm:
+author = "T. Badics and R. Boros",
+title = "{Implementing a Maximum Flow Algorithm:
 	Experiments with Dynamic Trees}",
-BOOKTITLE = "{Network Flows and Matching: First DIMACS Implementation
+booktitle = "{Network Flows and Matching: First DIMACS Implementation
               Challenge}",
-PUBLISHER = "AMS",
+publisher = "AMS",
 EDITOR = "D. S. Johnson and C. C. McGeoch",
-YEAR = 1993,
+year = 1993,
 PAGES = "43--64"}
 
 @Article{BNS,
@@ -5937,7 +5937,7 @@ Cocke and M. E. Hopkins and P. W. Markstein},
   title = 	 {Array Distribution in Parallel Programs},
   booktitle = 	 {Languages and Compilers for Parallel Computing},
   volume =	 369,
-  series =	 {Lecture Notes in Computer Science series},
+  series =	 {Lecture notes in Computer Science series},
   year =	 1996,
   publisher =	 {Springer-Verlag},
   pages =	 {76--91}
@@ -6285,7 +6285,7 @@ note = prelim # SPAA92,
 
 @article{Dijkstra,
 	author = {E. W. Dijkstra},
-	title = {A Note on Two Problems in Connection with Graphs},
+	title = {A note on Two Problems in Connection with Graphs},
 	journal = {Numerische Mathematik},
 	year = 1959,
 	volume = 1,
@@ -6298,7 +6298,7 @@ Lomonosov},
 Cuts in a Graph},
 	booktitle = {Studies in Discrete Optimization},
 	editor = {A. A. Fridman},
-	publisher = {Nauka Publishers},
+	publisher = {Nauka publishers},
 	address = {Moscow},
 	year = 1976,
 	pages = {290-306}}
@@ -6309,7 +6309,7 @@ Cuts in a Graph},
 type problems},
         booktitle =  {Studies in  Discrete  Mathematics},
         editor = {A. A. Fridman},
-        publisher ={ Nauka Publishers},
+        publisher ={ Nauka publishers},
         city = { Moscow},
         year = {1973},
         pages = {46--57},
@@ -6317,12 +6317,12 @@ type problems},
 }
 
 @ARTICLE{Dinitz:BlockingFlow,
-AUTHOR = "E. A. Dinitz",
-TITLE = "{Algorithm for Solution of a Problem of Maximum Flow in
+author = "E. A. Dinitz",
+title = "{Algorithm for Solution of a Problem of Maximum Flow in
 Networks with Power Estimation}",
 JOURNAL ="Soviet Math. Dokl.",
-VOLUME = 11,
-YEAR = 1970,
+volume = 11,
+year = 1970,
 PAGES = "1277-1280"}
 
 @article{Dixon:MST,
@@ -6357,10 +6357,10 @@ Science},
     note = "Full paper appears in J.ACM 42:4, July 1995, 844-856",
     url = "citeseer.ist.psu.edu/alon95colorcoding.html" }
 
-@article{Dyer:Volume,
+@article{Dyer:volume,
 	author = {M. E. Dyer and Alan M. Frieze and Ravi Kannan},
 	title = {A Random Polynomial Time Algorithm for Approximating
-		  the Volume of Convex Bodies},
+		  the volume of Convex Bodies},
 	journal = jacm,
 	volume = 38,
 	pages = {1--17},
@@ -6368,7 +6368,7 @@ Science},
 
 @article{Elias:Maxflow,
 	author = {P. Elias and A. Feinstein and C. E. Shannon},
-	title = {Note on Maximum Flow Through a Network},
+	title = {note on Maximum Flow Through a Network},
 	journal = {{IRE} Transactions on Information Theory {IT-2}},
 	pages = {117-199},
 	year = 1956}
@@ -6463,11 +6463,11 @@ Dynamic Graph Algorithms},
 }
 
 @ARTICLE{Even:Flow,
-AUTHOR = "Shimon Even and Robert E. Tarjan",
-TITLE = "{Network Flow and Testing Graph Connectivity}",
+author = "Shimon Even and Robert E. Tarjan",
+title = "{Network Flow and Testing Graph Connectivity}",
 JOURNAL = sicomp,
-VOLUME = 4,
-YEAR = 1975,
+volume = 4,
+year = 1975,
 PAGES = "507-518"}
 
 @inproceedings{Feder:Compression,
@@ -6546,18 +6546,18 @@ year  = 1995,
 	year = 1992}
 
 @article{Ford:Maxflow,
-	AUTHOR = {Ford, Jr., Lester R. and Delbert~R. Fulkerson},
-	TITLE = {Maximal Flow Through a Network},
+	author = {Ford, Jr., Lester R. and Delbert~R. Fulkerson},
+	title = {Maximal Flow Through a Network},
 	JOURNAL = {Canadian Journal of Mathematics},
-	VOLUME = 8,
-	YEAR = 1956,
+	volume = 8,
+	year = 1956,
 	PAGES = {399-404}}
 
 @book{Ford:FlowBook,
-	AUTHOR = {Ford, Jr., Lester R. and Delbert~R. Fulkerson},
-	TITLE = {Flows in Networks},
-	YEAR = 1962,
-	PUBLISHER = {Princeton University Press},
+	author = {Ford, Jr., Lester R. and Delbert~R. Fulkerson},
+	title = {Flows in Networks},
+	year = 1962,
+	publisher = {Princeton University Press},
 	address = {Princeton, New Jersey}}
 
 @article{Frank:Augmentation,
@@ -6650,7 +6650,7 @@ Spanning Trees},
 	author = frank,
 	title = {Applications of submodular functions},
 	booktitle= {Surveys in Combinatorics},
-	series = {London Math. Society Lecture Notes},
+	series = {London Math. Society Lecture notes},
 	number = 187,
 	editor = {K. Walker},
 	publisher = {Cambridge},
@@ -6856,7 +6856,7 @@ Integer Programming and Combinatorial Optimization},
 	year = 1993}
 
 @article{GalilPan,
-	Author = {Zvi Galil and Victor Pan},
+	author = {Zvi Galil and Victor Pan},
 	title = {Improved Processor Bounds for Combinatorial
 Problems in {$\RNC$}},
 	journal = COMB,
@@ -7016,12 +7016,12 @@ pages= "375-390"}
   acknowledgement = ack-nhfb,
 }
 @TECHREPORT{Goldberg:GlobalUpdates,
-AUTHOR = "A. V. Goldberg and Robert Kennedy",
-TITLE = "{Global Price Updates Help}",
+author = "A. V. Goldberg and Robert Kennedy",
+title = "{Global Price Updates Help}",
 INSTITUTION = "Department of Computer Science, Stanford University",
 NUMBER = "STAN-CS-94-1509",
-NOTE = "To appear in SIAM J.\ on Discrete Math.",
-YEAR = 1994}
+note = "To appear in SIAM J.\ on Discrete Math.",
+year = 1994}
 
 @article{Goldberg:Maxflow,
 	author = {Andrew V. Goldberg and Robert E. Tarjan},
@@ -7086,7 +7086,7 @@ YEAR = 1994}
 			Mathematics},
 	month = dec,
 	year = 1961,
-	Volume = 9,
+	volume = 9,
 	Number = 4,
 	pages = {551-570}}
 
@@ -7106,7 +7106,7 @@ Alexander Schrijver},
 	series = {Algorithms and Combinatorics},
 	volume = 2,
 	editors = {R. L. Graham and B. Korte and L{\'a}szl{\'o} Lov{\'}asz},
-	Publisher = sv,
+	publisher = sv,
         address={Berlin},
 	year = 1988}
 
@@ -7605,7 +7605,7 @@ Spanning Trees},
 	author = {Richard M. Karp and Eli Upfal and Avi Wigderson},
 	title = {Constructing a Perfect Matching is in Random {$\NC$}},
 	journal = COMB,
-	Volume = 6,
+	volume = 6,
 	number = 1,
 	year = 1986,
 	pages = {35--48}}
@@ -7645,7 +7645,7 @@ Network Reliability Problems},
  issn = {0004-3702},
  pages = {141--153},
  doi = {http://dx.doi.org/10.1016/0004-3702(93)90036-B},
- publisher = {Elsevier Science Publishers Ltd.},
+ publisher = {Elsevier Science publishers Ltd.},
  address = {Essex, UK},
  }
 
@@ -7694,16 +7694,16 @@ Problems},
 	pages = {156--162}}
 
 @INCOLLECTION{Karzanov:Flow,
-AUTHOR = "Alexander~V. Karzanov",
-TITLE = "O Nakhozhdenii Maksimal$'$nogo Potoka v Setyakh
+author = "Alexander~V. Karzanov",
+title = "O Nakhozhdenii Maksimal$'$nogo Potoka v Setyakh
 Spetsial$'$nogo Vida i Nekotorykh Prilozheniyakh",
-BOOKTITLE = "Matematicheskie Voprosy Upravleniya Proizvodstvom",
-VOLUME = 5,
-PUBLISHER = "Moscow State University Press, Moscow",
-NOTE = "In Russian; title translation:
+booktitle = "Matematicheskie Voprosy Upravleniya Proizvodstvom",
+volume = 5,
+publisher = "Moscow State University Press, Moscow",
+note = "In Russian; title translation:
 On Finding Maximum Flows in a Network with Special
 Structure and Some Applications",
-YEAR = 1973}
+year = 1973}
 
 @phdthesis{Kerr,
 	author = {L. R. Kerr},
@@ -7992,7 +7992,7 @@ the Traveling Salesman Problem},
 
 @unpublished{Leighton:Recurrence,
         author = {Tom Leighton},
-        title = {Notes on Better Master Theorems for
+        title = {notes on Better Master Theorems for
                   Divide-and-Conquer Recurrences},
         year = 1996,
         note = {\tt
@@ -8281,11 +8281,11 @@ Graph},
 }
 
 @ARTICLE{Nagamochi:Implementation,
-AUTHOR = nagamochi # { and T. Ono and } # ibaraki,
-TITLE = "Implementing an Efficient Minimum Capacity Cut Algorithm",
+author = nagamochi # { and T. Ono and } # ibaraki,
+title = "Implementing an Efficient Minimum Capacity Cut Algorithm",
 JOURNAL = mp,
-VOLUME = 67,
-YEAR = 1994,
+volume = 67,
+year = 1994,
 PAGES = "297--324"}
 
 @article{Nagamochi:Connectivity,
@@ -8512,7 +8512,7 @@ the Probability that a Network Remains Connected},
 
 @techreport{Raghavan:Randomization,
 	author = {Prabhakar Raghavan},
-	title = {Lecture Notes on Randomized Algorithms},
+	title = {Lecture notes on Randomized Algorithms},
 	institution = {Computer Science/Mathematics IBM Research
 Division},
 	type = {Research Report},
@@ -8765,7 +8765,7 @@ month = jun,
 
 @inproceedings{Szegedy:Theta,
         author = {Mario Szegedy},
-        title = {A Note on the $\theta$ Number of Lov\'asz and the Generalized
+        title = {A note on the $\theta$ Number of Lov\'asz and the Generalized
 Delsarte Bound},
         crossref={FOCS94},
         pages = {36--39}}
@@ -9399,7 +9399,7 @@ year = 2002
 author = "S. Handschuh and S. Staab",
 booktitle = "Proceedings of the 11th International World Wide Web Conference",
 year = 2003,
-title = "Authoring and Annotation of Web Pages in CREAM",
+title = "authoring and Annotation of Web Pages in CREAM",
 }
 
 @inproceedings{ kahan01annotea,
@@ -9644,14 +9644,14 @@ year = 2003
 
 @misc{iana-uri,
 title={The Official {IANA} Registry of {URI} Schemes},
-author={{Internet Assigned Numbers Authority}},
+author={{Internet Assigned Numbers authority}},
 year=2002,
 howpublished={http://www.iana.org/assignments/uri-schemes}
 }
 
 @misc{iana-urn,
   title  = {The Official {IANA} Registry of {URN} Namespaces},
-  author = {{Internet Assigned Numbers Authority}},
+  author = {{Internet Assigned Numbers authority}},
   year   = 2002,
   howpublished = {\url{http://www.iana.org/assignments/urn-namespaces}}
 }
@@ -9690,9 +9690,9 @@ howpublished={http://www.iana.org/assignments/uri-schemes}
 }
 
 @Book{Jensen96,
-  Author         = {Jensen, F.},
-  Title          = {An Introduction to Bayesian Networks},
-  Publisher      = {Springer Verlag},
+  author         = {Jensen, F.},
+  title          = {An Introduction to Bayesian Networks},
+  publisher      = {Springer Verlag},
   keywords       = {knowledge representation bayesian networks da99},
   year           = 1996,
 }
@@ -9717,23 +9717,23 @@ howpublished={http://www.iana.org/assignments/uri-schemes}
 }
 
 @InProceedings{jensen-neville-NAS02,
-  Author         = {Jensen, D. and Neville, J.},
-  Title          = {Data mining in social networks},
-  BookTitle      = {Invited presentation to the National Academy of Sciences Workshop on Dynamic Social Network Modeling and Analysis},
+  author         = {Jensen, D. and Neville, J.},
+  title          = {Data mining in social networks},
+  booktitle      = {Invited presentation to the National Academy of Sciences Workshop on Dynamic Social Network Modeling and Analysis},
   city           = {Washington, DC},
   month          = nov,
   year           = 2002
 }
 
 @InProceedings{cohn95active,
-  Author         = {David A. Cohn and Zoubin Ghahramani and Michael I.
+  author         = {David A. Cohn and Zoubin Ghahramani and Michael I.
                    Jordan},
-  Title          = {Active Learning with Statistical Models},
-  BookTitle      = {Advances in Neural Information Processing Systems},
+  title          = {Active Learning with Statistical Models},
+  booktitle      = {Advances in Neural Information Processing Systems},
   Editor         = {G. Tesauro and D. Touretzky and T. Leen},
-  Volume         = {7},
+  volume         = {7},
   Pages          = {705--712},
-  Publisher      = {The {MIT} Press},
+  publisher      = {The {MIT} Press},
   url            = {citeseer.nj.nec.com/cohn96active.html},
   year           = 1995,
 }
@@ -9785,7 +9785,7 @@ howpublished={http://www.iana.org/assignments/uri-schemes}
 }
 
 @inproceedings{french97,
-	title={Automating the Construction of Authority Files in Digital Libraries: A Case Study},
+	title={Automating the Construction of authority Files in Digital Libraries: A Case Study},
 	author={James C. French and Allison L. Powell and Eric Schulman and John L. Pfaltz},
  	booktitle = {European Conference on Digital Libraries},
     pages = {55--71},
@@ -9839,22 +9839,22 @@ howpublished={http://www.iana.org/assignments/uri-schemes}
 
 @misc{iana-uri,
 title={The Official {IANA} Registry of {URI} Schemes},
-author={{Internet Assigned Numbers Authority}},
+author={{Internet Assigned Numbers authority}},
 year=2002,
 note={http://www.iana.org/assignments/uri-schemes}
 }
 
 @misc{iana-urn,
 title={The Official {IANA} Registry of {URN} Namespaces},
-author={{Internet Assigned Numbers Authority}},
+author={{Internet Assigned Numbers authority}},
 year=2002,
 note={http://www.iana.org/assignments/urn-namespaces}
 }
 
 @InProceedings{cohen00,
-  Author         = {William W. Cohen and Henry Kautz and David McAllester},
-  Title          = {Hardening Soft Information Sources},
-  BookTitle      = {Proceedings of the Sixth International Conference on
+  author         = {William W. Cohen and Henry Kautz and David McAllester},
+  title          = {Hardening Soft Information Sources},
+  booktitle      = {Proceedings of the Sixth International Conference on
                    Knowledge Discovery and Data Mining},
   Pages          = {255--259},
   Address        = {Boston, MA},
@@ -9864,10 +9864,10 @@ note={http://www.iana.org/assignments/urn-namespaces}
 }
 
 @InProceedings{mccallum00,
-  Author         = {Andrew K. McCallum and Kamal Nigam and Lyle Ungar},
-  Title          = {Efficient Clustering of High-Dimensional Data Sets
+  author         = {Andrew K. McCallum and Kamal Nigam and Lyle Ungar},
+  title          = {Efficient Clustering of High-Dimensional Data Sets
                    with Application to Reference Matching},
-  BookTitle      = {Proceedings of the Sixth International Conference on
+  booktitle      = {Proceedings of the Sixth International Conference on
                    Knowledge Discovery and Data Mining},
   Pages          = {169--178},
   Address        = {Boston, MA},
@@ -9887,12 +9887,12 @@ note={http://www.iana.org/assignments/urn-namespaces}
 }
 
 @InProceedings{lafferty01conditional,
-  Author         = {John Lafferty and Andrew McCallum and Fernando Pereira},
-  Title          = {Conditional Random Fields: {P}robabilistic Models for
+  author         = {John Lafferty and Andrew McCallum and Fernando Pereira},
+  title          = {Conditional Random Fields: {P}robabilistic Models for
                    Segmenting and Labeling Sequence Data},
-  BookTitle      = {Proc. 18th International Conf. on Machine Learning},
+  booktitle      = {Proc. 18th International Conf. on Machine Learning},
   Pages          = {282--289},
-  Publisher      = {Morgan Kaufmann, San Francisco, CA},
+  publisher      = {Morgan Kaufmann, San Francisco, CA},
   year           = 2001
 }
 
@@ -9967,7 +9967,7 @@ booktitle="CHI 2002, Minneapolis, Minnesota, USA"
 @inproceedings{Egnor,
  author="Daniel Egnor and Robert Lord",
  title= {Structured Information Retrieval using {XML}},
- booktitle= {Working Notes of the ACM SIGIR Workshop on XML and Information Retrieval},
+ booktitle= {Working notes of the ACM SIGIR Workshop on XML and Information Retrieval},
  year="2000",
  location = {Athens, Greece},
 }
@@ -10656,7 +10656,7 @@ booktitle="CHI 2002, Minneapolis, Minnesota, USA"
 @inproceedings{DataGuidesSearch,
  author = {Roy Goldman and Jennifer Widom},
  title = {Interactive Query and Search in Semistructured Databases},
- booktitle = {Proceedings of the First International Workshop on the Web and Databases (WebDB '98), Lecture Notes in Computer Science 1590},
+ booktitle = {Proceedings of the First International Workshop on the Web and Databases (WebDB '98), Lecture notes in Computer Science 1590},
  year = {1998},
  month = {March},
  pages = {52--62},
@@ -10667,7 +10667,7 @@ booktitle="CHI 2002, Minneapolis, Minnesota, USA"
 @inproceedings{Trigoni02,
  author = {Agathoniki Trigoni},
  title = {Interactive Query Formulation in Semistructured Databases},
- booktitle = {Proceedings of the Fifth International Conference on Flexible Query Answering Systems (FQAS 2002), Lecture Notes in Computer Science 2522},
+ booktitle = {Proceedings of the Fifth International Conference on Flexible Query Answering Systems (FQAS 2002), Lecture notes in Computer Science 2522},
  year = {2002},
  month = {October},
  pages = {356--369},
